--- a/achievements.html
+++ b/achievements.html
@@ -190,7 +190,7 @@
   </nav>
 
   <main>
-    <section class="achievements-header">
+    <section class="hero achievements-header">
       <div class="icon">🏆</div>
       <h1>Achievements</h1>
       <p>A showcase of my notable achievements.</p>
