--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      gap: 3.5rem;
+      gap: 2.8rem;
       z-index: 1;
       width: 100%;
       max-width: 1100px;
@@ -317,7 +317,7 @@
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
-        gap: 2.5rem;
+        gap: 3.5rem;
         min-height: 0;
         padding: 2rem 0.5rem 1.5rem 0.5rem;
       }
@@ -681,6 +681,367 @@
       </div>
     </section>
 
+    <!-- Timeline View Section -->
+    <section class="timeline-view-section">
+      <div class="timeline-view-flex">
+        <div class="timeline-view-info">
+          <h2 class="timeline-view-title">Project Timeline</h2>
+          <p class="timeline-view-desc-text">A chronological journey through my key projects, highlighting milestones and creative achievements over the years.</p>
+        </div>
+        <div class="timeline-view-container">
+          <div class="timeline-view-line"></div>
+          <div class="timeline-view-list">
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">23 Dec 2023</div>
+                <div class="timeline-view-project">Locker</div>
+                <div class="timeline-view-desc">A secure digital locker for storing and managing files online.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">2 March 2024</div>
+                <div class="timeline-view-project">Logo Design</div>
+                <div class="timeline-view-desc">Rifle associations, tech fest main logo, t-shirt logo design.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">13 Feb 2024</div>
+                <div class="timeline-view-project">Boarding School UI</div>
+                <div class="timeline-view-desc">A mobile-friendly UI/UX for a boarding school app, designed in Figma.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">22 March 2024</div>
+                <div class="timeline-view-project">Poster Design</div>
+                <div class="timeline-view-desc">Flyers, posters, certificates, event branding.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">25 March 2024</div>
+                <div class="timeline-view-project">ID Card Design</div>
+                <div class="timeline-view-desc">Custom ID cards for college events, staff, and students.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">28 March 2024</div>
+                <div class="timeline-view-project">Insta Posts Design</div>
+                <div class="timeline-view-desc">Creative Instagram posts for event promotions and campaigns.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">28 March 2024</div>
+                <div class="timeline-view-project">Brochures</div>
+                <div class="timeline-view-desc">Creative and informative brochures for events and businesses.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">8 August 2024</div>
+                <div class="timeline-view-project">Password Manager</div>
+                <div class="timeline-view-desc">A secure web app for managing and generating passwords.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">16 October 2024</div>
+                <div class="timeline-view-project">File Format Converter</div>
+                <div class="timeline-view-desc">A web app to convert files between various formats.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">20 Dec 2024, 14 Feb 2025</div>
+                <div class="timeline-view-project">Portfolio Project</div>
+                <div class="timeline-view-desc">A personal portfolio UI/UX designed and prototyped in Figma and Framer.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">21 April 2025</div>
+                <div class="timeline-view-project">Car Rental Service</div>
+                <div class="timeline-view-desc">A sleek UI/UX for a car rental platform, designed in Figma and Framer.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">2 June 2025</div>
+                <div class="timeline-view-project">Portfolio Website</div>
+                <div class="timeline-view-desc">A modern portfolio site UI/UX built with HTML, CSS, and JavaScript.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">2 June 2025</div>
+                <div class="timeline-view-project">Portfolio</div>
+                <div class="timeline-view-desc">A personal portfolio website showcasing my work.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">24 June 2025</div>
+                <div class="timeline-view-project">Cognite</div>
+                <div class="timeline-view-desc">A modern chatting app for real-time conversations.</div>
+              </div>
+            </div>
+            <div class="timeline-view-item left">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content left">
+                <div class="timeline-view-date">28 June 2025</div>
+                <div class="timeline-view-project">Shot Chat</div>
+                <div class="timeline-view-desc">A Twitter-type clone with added chatting features.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="timeline-view-mobile-title">
+        <h2 class="timeline-view-title">Project Timeline</h2>
+      </div>
+    </section>
+    <style>
+      .timeline-view-section {
+        width: 100%;
+        max-width: 900px;
+        margin: 3.5rem auto 0 auto;
+        padding: 0 1.5rem 3.5rem 1.5rem;
+        box-sizing: border-box;
+        position: relative;
+      }
+      .timeline-view-flex {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        width: 100%;
+        gap: 2.5rem;
+      }
+      .timeline-view-info {
+        flex: 0 0 260px;
+        max-width: 260px;
+        padding-top: 1.5rem;
+      }
+      .timeline-view-title {
+        font-size: 2rem;
+        font-weight: 800;
+        color: #2a254d;
+        margin-bottom: 1.1rem;
+        letter-spacing: -1px;
+        text-align: left;
+        background: linear-gradient(90deg, #ff6ec4 0%, #7873f5 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+      }
+      .timeline-view-desc-text {
+        font-size: 1.13rem;
+        color: #3d375a;
+        margin-bottom: 0.5rem;
+        line-height: 1.6;
+      }
+      .timeline-view-container {
+        position: relative;
+        flex: 1 1 0;
+        min-width: 0;
+        min-height: 320px;
+        display: flex;
+        justify-content: center;
+      }
+      .timeline-view-line {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        width: 4px;
+        height: 100%;
+        background: linear-gradient(180deg, #ff6ec4 0%, #7873f5 100%);
+        border-radius: 2px;
+        transform: translateX(-50%);
+        z-index: 0;
+        opacity: 0.18;
+      }
+      .timeline-view-list {
+        width: 100%;
+        max-width: 700px;
+        display: flex;
+        flex-direction: column;
+        gap: 2.5rem;
+        z-index: 1;
+        max-height: 480px;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: #ff6ec4 #e3e6ff;
+      }
+      .timeline-view-list::-webkit-scrollbar {
+        width: 8px;
+        background: #e3e6ff;
+        border-radius: 8px;
+      }
+      .timeline-view-list::-webkit-scrollbar-thumb {
+        background: linear-gradient(90deg, #ff6ec4 0%, #7873f5 100%);
+        border-radius: 8px;
+      }
+      .timeline-view-item {
+        position: relative;
+        display: flex;
+        align-items: center;
+        min-height: 80px;
+        /* margin-bottom removed to rely on gap */
+      }
+      .timeline-view-list .timeline-view-item:first-child {
+        margin-top: 1.5rem;
+      }
+      .timeline-view-dot {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: linear-gradient(135deg, #ff6ec4 0%, #7873f5 100%);
+        box-shadow: 0 0 0 8px rgba(120,115,245,0.10);
+        border: 4px solid #fff;
+        z-index: 2;
+        animation: timelineDotPulse 1.5s infinite alternate;
+      }
+      .timeline-view-content {
+        background: #fff;
+        border-radius: 1.1rem;
+        box-shadow: 0 6px 24px rgba(120,115,245,0.13), 0 2px 8px rgba(0,0,0,0.10);
+        border: 1.5px solid #ecebfa;
+        padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+        min-width: 220px;
+        max-width: 340px;
+        width: 100%;
+        position: relative;
+      }
+      .timeline-view-content.left {
+        margin-left: calc(0%);
+        margin-right: calc(50% + 42px);
+        text-align: right;
+      }
+      .timeline-view-content.right {
+        margin-left: calc(50% + 42px);
+        margin-right: 0;
+        text-align: left;
+      }
+      .timeline-view-date {
+        font-size: 1.1rem;
+        font-weight: 700;
+        color: #ff6ec4;
+        margin-bottom: 0.3rem;
+      }
+      .timeline-view-project {
+        font-size: 1.18rem;
+        font-weight: 700;
+        color: #2a254d;
+        margin-bottom: 0.2rem;
+      }
+      .timeline-view-desc {
+        font-size: 1.01rem;
+        color: #3d375a;
+      }
+      @keyframes timelineDotPulse {
+        0% { box-shadow: 0 0 0 8px rgba(120,115,245,0.10); }
+        100% { box-shadow: 0 0 0 18px rgba(120,115,245,0.07); }
+      }
+      @media (max-width: 900px) {
+        .timeline-view-section {
+          max-width: 100vw;
+          padding: 0 0.5rem 2.5rem 0.5rem;
+        }
+        .timeline-view-list {
+          max-width: 98vw;
+        }
+        .timeline-view-content {
+          min-width: 0;
+          max-width: 98vw;
+        }
+      }
+      @media (max-width: 700px) {
+        .timeline-view-flex {
+          flex-direction: column;
+          align-items: center;
+          gap: 0;
+        }
+        .timeline-view-info {
+          display: none;
+        }
+        .timeline-view-mobile-title {
+          display: block;
+          text-align: center;
+          margin-bottom: 1.2rem;
+        }
+        .timeline-view-title {
+          font-size: 1.3rem;
+          text-align: center;
+          margin-bottom: 1.2rem;
+        }
+        .timeline-view-container {
+          width: 100%;
+          min-width: 0;
+          margin: 0 auto;
+        }
+        .timeline-view-list {
+          margin: 0 auto;
+        }
+        .timeline-view-content.left,
+        .timeline-view-content.right {
+          margin-left: auto;
+          margin-right: auto;
+          text-align: left;
+        }
+        .timeline-view-item.left,
+        .timeline-view-item.right {
+          justify-content: center;
+        }
+        .timeline-view-content.left,
+        .timeline-view-content.right {
+          max-width: 98vw;
+          min-width: 0;
+          width: 100%;
+        }
+        .timeline-view-item.left,
+        .timeline-view-item.right {
+          flex-direction: column;
+          align-items: center;
+        }
+        .timeline-view-content.left,
+        .timeline-view-content.right {
+          margin-left: 0;
+          margin-right: 0;
+          text-align: left;
+        }
+      }
+      .timeline-view-mobile-title {
+        display: none;
+      }
+      @media (max-width: 700px) {
+        .timeline-view-section {
+          display: none !important;
+        }
+      }
+    </style>
+
     <!-- Project Modal Popup -->
     <div id="projectModal" class="modal-overlay" style="display:none;">
       <div class="modal-content">
@@ -769,6 +1130,8 @@
         document.getElementById('projectModal').style.display = 'none';
       }
     };
+
+    // (navbar animation logic moved to scripts/main.js)
   </script>
 </body>
 </html>
