--- a/projects-game.html
+++ b/projects-game.html
@@ -209,7 +209,7 @@
   </nav>
 
   <main>
-    <section class="category-header">
+    <section class="hero category-header">
       <div class="icon">🎮</div>
       <h1>Game Development Projects</h1>
       <p>A showcase of my game development work.</p>
