--- a/projects-graphic.html
+++ b/projects-graphic.html
@@ -218,7 +218,7 @@
   </nav>
 
   <main>
-    <section class="category-header">
+    <section class="hero category-header">
       <div class="icon">🎨</div>
       <h1>Graphic Design Projects</h1>
       <p>A showcase of my graphic design work.</p>
@@ -227,7 +227,7 @@
       <div class="projects-list">
         <div class="project-card">
           <div class="project-title">Poster Design</div>
-          <div class="project-date">2024-03-10</div>
+          <div class="project-date">22 March 2024</div>
           <div class="project-desc">Flyers, posters, certificates, ID card designs, Insta posts,</div>
           <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Adobe Photoshop</span>
@@ -238,7 +238,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">ID Cards Design</div>
-          <div class="project-date">2024-03-12</div>
+          <div class="project-date">25 March 2024</div>
           <div class="project-desc">Custom ID cards for college events, staff, and students, focusing on branding and security features.</div>
           <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Adobe Photoshop</span>
@@ -248,7 +248,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Instagram Post Design</div>
-          <div class="project-date">2024-03-15</div>
+          <div class="project-date">28 March 2024</div>
           <div class="project-desc">Creative Instagram posts for event promotions, social media campaigns, and brand engagement.</div>
           <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Canva</span>
@@ -258,7 +258,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Logo Design</div>
-          <div class="project-date">2024-02-05</div>
+          <div class="project-date">2 March 2024</div>
           <div class="project-desc">Rifle associations, tech fest main logo, t-shirt logo design</div>
           <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Canva</span>
@@ -269,7 +269,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Brochures</div>
-          <div class="project-date">2024-06-10</div>
+          <div class="project-date">28 March 2024</div>
           <div class="project-desc">Creative and informative brochures designed for events, businesses, and promotions.</div>
           <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Adobe Photoshop</span>
