--- a/projects-uiux.html
+++ b/projects-uiux.html
@@ -240,7 +240,7 @@
   </nav>
 
   <main>
-    <section class="category-header">
+    <section class="hero category-header">
       <div class="icon">🖌️</div>
       <h1>UI/UX Design Projects</h1>
       <p>A showcase of my UI/UX design work.</p>
@@ -249,7 +249,7 @@
       <div class="projects-list">
         <div class="project-card">
           <div class="project-title">Portfolio Project</div>
-          <div class="project-date">2024-04-10</div>
+          <div class="project-date">20 Dec 2024, 14 Feb 2025</div>
           <div class="project-desc">A personal portfolio UI/UX designed and prototyped in Figma and Framer.</div>
           <div style="margin-top:0.5em;">
             <span class="project-tag figma">Figma</span>
@@ -258,7 +258,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Car Rental Service</div>
-          <div class="project-date">2024-03-20</div>
+          <div class="project-date">21 April 2025</div>
           <div class="project-desc">A sleek UI/UX for a car rental platform, designed in Figma and Framer.</div>
           <div style="margin-top:0.5em;">
             <span class="project-tag figma">Figma</span>
@@ -267,7 +267,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Portfolio Website</div>
-          <div class="project-date">2024-05-01</div>
+          <div class="project-date">2 June 2025</div>
           <div class="project-desc">A modern portfolio site UI/UX built with HTML, CSS, and JavaScript.</div>
           <div style="margin-top:0.5em;">
             <span class="project-tag">HTML</span>
@@ -277,7 +277,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Boarding School UI</div>
-          <div class="project-date">2024-05-02</div>
+          <div class="project-date">13 Feb 2024</div>
           <div class="project-desc">A mobile-friendly UI/UX for a boarding school app, designed in Figma.</div>
           <div style="margin-top:0.5em;">
             <span class="project-tag figma">Figma</span>
