--- a/projects-web.html
+++ b/projects-web.html
@@ -240,7 +240,7 @@
   </nav>
 
   <main>
-    <section class="category-header">
+    <section class="hero category-header">
       <div class="icon">💻</div>
       <h1>Web Development Projects</h1>
       <p>A showcase of my web development work.</p>
@@ -249,7 +249,7 @@
       <div class="projects-list">
         <div class="project-card">
           <div class="project-title">Cognite</div>
-          <div class="project-date">2024-04-01</div>
+          <div class="project-date">24 June 2025</div>
           <div class="project-desc">A modern chatting app for real-time conversations.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
@@ -261,7 +261,7 @@
                   </div>
         <div class="project-card">
           <div class="project-title">ShotChat</div>
-          <div class="project-date">2024-03-15</div>
+          <div class="project-date">28 June 2025</div>
           <div class="project-desc">A Twitter-type clone with added chatting features.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
@@ -273,7 +273,7 @@
                   </div>
         <div class="project-card">
           <div class="project-title">Password Manager</div>
-          <div class="project-date">2024-02-10</div>
+          <div class="project-date">8 August 2024</div>
           <div class="project-desc">A secure web app for managing and generating passwords.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
@@ -284,7 +284,7 @@
                   </div>
         <div class="project-card">
           <div class="project-title">File Format Converter</div>
-          <div class="project-date">2024-01-20</div>
+          <div class="project-date">16 October 2024</div>
           <div class="project-desc">A web app to convert files between various formats.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
@@ -294,7 +294,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Locker</div>
-          <div class="project-date">2024-05-03</div>
+          <div class="project-date">23 Dec 2023</div>
           <div class="project-desc">A secure digital locker for storing and managing files online.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
@@ -306,7 +306,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">Portfolio</div>
-          <div class="project-date">2024-06-09</div>
+          <div class="project-date">2 June 2025</div>
           <div class="project-desc">A personal portfolio website showcasing my work.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
