--- a/skills.html
+++ b/skills.html
@@ -270,7 +270,7 @@
   </nav>
 
   <main>
-    <section class="skills-hero">
+    <section class="hero">
       <div class="skills-hero-inner">
         <h1 class="skills-hero-title">My Skills</h1>
         <p class="skills-hero-desc">A multi-disciplinary skillset across design and development. I create modern, user-centric digital experiences in web, UI/UX, graphics, and games.</p>
