--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <style>
+      .timeline-tag {
+        display: inline-block;
+        font-size: 0.78em;
+        font-weight: 600;
+        border-radius: 999px;
+        padding: 0.13em 0.85em;
+        margin: 0.18em 0 0.18em 0.5em;
+        letter-spacing: 0.2px;
+        vertical-align: middle;
+        box-shadow: 0 1px 4px rgba(45,108,223,0.06);
+        background: #e3f0ff;
+        color: #2563eb;
+      }
+      .timeline-tag.web {
+        background: linear-gradient(90deg, #dbeafe 60%, #e0f2fe 100%);
+        color: #2563eb;
+      }
+      .timeline-tag.graphics {
+        background: linear-gradient(90deg, #ffe0f0 60%, #ffe6e6 100%);
+        color: #e94f7c;
+      }
+      .timeline-tag.uiux {
+        background: linear-gradient(90deg, #e0e7ff 60%, #f0f4ff 100%);
+        color: #6366f1;
+      }
     html, body {
       width: 100vw;
       height: 100vh;
@@ -696,6 +721,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">23 Dec 2023</div>
                 <div class="timeline-view-project">Locker</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A secure digital locker for storing and managing files online.</div>
               </div>
             </div>
@@ -704,6 +730,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">2 March 2024</div>
                 <div class="timeline-view-project">Logo Design</div>
+                <span class="timeline-tag graphics">Graphics</span>
                 <div class="timeline-view-desc">Rifle associations, tech fest main logo, t-shirt logo design.</div>
               </div>
             </div>
@@ -712,6 +739,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">13 Feb 2024</div>
                 <div class="timeline-view-project">Boarding School UI</div>
+                <span class="timeline-tag uiux">UI/UX</span>
                 <div class="timeline-view-desc">A mobile-friendly UI/UX for a boarding school app, designed in Figma.</div>
               </div>
             </div>
@@ -720,6 +748,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">22 March 2024</div>
                 <div class="timeline-view-project">Poster Design</div>
+                <span class="timeline-tag graphics">Graphics</span>
                 <div class="timeline-view-desc">Flyers, posters, certificates, event branding.</div>
               </div>
             </div>
@@ -728,6 +757,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">25 March 2024</div>
                 <div class="timeline-view-project">ID Card Design</div>
+                <span class="timeline-tag graphics">Graphics</span>
                 <div class="timeline-view-desc">Custom ID cards for college events, staff, and students.</div>
               </div>
             </div>
@@ -736,6 +766,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">28 March 2024</div>
                 <div class="timeline-view-project">Insta Posts Design</div>
+                <span class="timeline-tag graphics">Graphics</span>
                 <div class="timeline-view-desc">Creative Instagram posts for event promotions and campaigns.</div>
               </div>
             </div>
@@ -744,6 +775,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">28 March 2024</div>
                 <div class="timeline-view-project">Brochures</div>
+                <span class="timeline-tag graphics">Graphics</span>
                 <div class="timeline-view-desc">Creative and informative brochures for events and businesses.</div>
               </div>
             </div>
@@ -752,6 +784,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">8 August 2024</div>
                 <div class="timeline-view-project">Password Manager</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A secure web app for managing and generating passwords.</div>
               </div>
             </div>
@@ -760,6 +793,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">16 October 2024</div>
                 <div class="timeline-view-project">File Format Converter</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A web app to convert files between various formats.</div>
               </div>
             </div>
@@ -768,6 +802,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">20 Dec 2024, 14 Feb 2025</div>
                 <div class="timeline-view-project">Portfolio Project</div>
+                <span class="timeline-tag uiux">UI/UX</span>
                 <div class="timeline-view-desc">A personal portfolio UI/UX designed and prototyped in Figma and Framer.</div>
               </div>
             </div>
@@ -776,6 +811,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">21 April 2025</div>
                 <div class="timeline-view-project">Car Rental Service</div>
+                <span class="timeline-tag uiux">UI/UX</span>
                 <div class="timeline-view-desc">A sleek UI/UX for a car rental platform, designed in Figma and Framer.</div>
               </div>
             </div>
@@ -784,6 +820,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">2 June 2025</div>
                 <div class="timeline-view-project">Portfolio Website</div>
+                <span class="timeline-tag uiux">UI/UX</span>
                 <div class="timeline-view-desc">A modern portfolio site UI/UX built with HTML, CSS, and JavaScript.</div>
               </div>
             </div>
@@ -792,6 +829,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">2 June 2025</div>
                 <div class="timeline-view-project">Portfolio</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A personal portfolio website showcasing my work.</div>
               </div>
             </div>
@@ -800,6 +838,7 @@
               <div class="timeline-view-content right">
                 <div class="timeline-view-date">24 June 2025</div>
                 <div class="timeline-view-project">Cognite</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A modern chatting app for real-time conversations.</div>
               </div>
             </div>
@@ -808,6 +847,7 @@
               <div class="timeline-view-content left">
                 <div class="timeline-view-date">28 June 2025</div>
                 <div class="timeline-view-project">Shot Chat</div>
+                <span class="timeline-tag web">Web</span>
                 <div class="timeline-view-desc">A Twitter-type clone with added chatting features.</div>
               </div>
             </div>
@@ -818,6 +858,10 @@
         <h2 class="timeline-view-title">Project Timeline</h2>
       </div>
     </section>
+    <!-- Floating Info Box for Timeline Cards -->
+    <div id="timeline-float-info" style="display:none;position:fixed;z-index:99999 !important;pointer-events:none;min-width:240px;max-width:420px;padding:0;background:#fff;border-radius:1rem;box-shadow:0 4px 24px rgba(120,115,245,0.13),0 2px 8px rgba(0,0,0,0.10);border:2.5px solid #ff6ec4;transition:opacity 0.15s;opacity:0.97;background:rgba(255,255,255,0.98);border:2.5px solid #ff6ec4;pointer-events:none;overflow:hidden;text-align:center;">
+      <div id="timeline-float-info-content"></div>
+    </div>
     <style>
       .timeline-view-section {
         width: 100%;
@@ -1041,7 +1085,6 @@
         }
       }
     </style>
-
     <!-- Project Modal Popup -->
     <div id="projectModal" class="modal-overlay" style="display:none;">
       <div class="modal-content">
@@ -1098,6 +1141,74 @@
   </footer>
 
   <script src="scripts/main.js"></script>
+  <script>
+    // Floating info box for timeline cards (run after DOM is loaded)
+    window.addEventListener('DOMContentLoaded', function() {
+      const floatBox = document.getElementById('timeline-float-info');
+      const floatBoxContent = document.getElementById('timeline-float-info-content');
+      document.querySelectorAll('.timeline-view-item').forEach(card => {
+        card.addEventListener('mouseenter', function(e) {
+          const project = this.querySelector('.timeline-view-project').textContent.trim();
+          let img = '';
+          if (project === 'Insta Posts Design') {
+            img = '<img src="images/timeline/insta.png" alt="Insta Posts Design" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Locker') {
+            img = '<img src="images/timeline/locker.png" alt="Locker" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Logo Design') {
+            img = '<img src="images/timeline/logoo.png" alt="Logo Design" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Poster Design') {
+            img = '<img src="images/timeline/poster.png" alt="Poster Design" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Shot Chat') {
+            img = '<img src="images/timeline/shotchat.png" alt="Shot Chat" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Cognite') {
+            img = '<img src="images/timeline/cognite.png" alt="Cognite" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'File Format Converter') {
+            img = '<img src="images/timeline/format.png" alt="File Format Converter" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'ID Card Design') {
+            img = '<img src="images/timeline/id card.png" alt="ID Card Design" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Password Manager') {
+            img = '<img src="images/timeline/password.png" alt="Password Manager" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Portfolio Project') {
+            img = '<img src="images/timeline/portfolio1.png" alt="Portfolio Project" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Portfolio Website') {
+            img = '<img src="images/timeline/portfolio2.png" alt="Portfolio Website" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Portfolio') {
+            img = '<img src="images/timeline/portfolio2.png" alt="Portfolio" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          }
+          if (img) {
+            floatBoxContent.innerHTML = img;
+          } else {
+            const content = this.querySelector('.timeline-view-content').innerHTML;
+            floatBoxContent.innerHTML = content;
+          }
+          floatBox.style.display = 'block';
+          console.log('mouseenter on timeline card');
+        });
+        card.addEventListener('mousemove', function(e) {
+          const offsetX = 24;
+          const offsetY = 16;
+          let left = e.clientX + offsetX;
+          let top = e.clientY + offsetY;
+          const boxRect = floatBox.getBoundingClientRect();
+          const img = floatBoxContent.querySelector('img');
+          const imgW = img ? img.naturalWidth || 400 : 400;
+          const imgH = img ? img.naturalHeight || 400 : 400;
+          const maxW = Math.min(window.innerWidth - 20, 420);
+          const maxH = Math.min(window.innerHeight - 20, 420);
+          // Clamp box to viewport
+          if (left + maxW > window.innerWidth) left = window.innerWidth - maxW;
+          if (top + maxH > window.innerHeight) top = window.innerHeight - maxH;
+          floatBox.style.left = left + 'px';
+          floatBox.style.top = top + 'px';
+          console.log('mousemove on timeline card', e.clientX, e.clientY);
+        });
+        card.addEventListener('mouseleave', function() {
+          floatBox.style.display = 'none';
+          console.log('mouseleave on timeline card');
+        });
+      });
+    });
+  </script>
   <script>
     // Modal logic for project cards
     document.querySelectorAll('.project-card').forEach(card => {
